--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 appdirs==1.4.4
-beast-night-tv @ file:///F:/Hard-disk/Project/Works/JAK%20Python%20Package
 black==21.7b0
 bleach==4.0.0
 certifi==2021.5.30
@@ -15,6 +14,7 @@ keyring==23.0.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
 mergedeep==1.3.4
+mkdocs==1.2.2
 mypy-extensions==0.4.3
 packaging==21.0
 Panda3D==1.10.7
