--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==21.2.0
 black==21.9b0
 bleach==4.1.0
 certifi==2021.10.8
@@ -9,6 +11,7 @@ docutils==0.18
 ghp-import==2.0.2
 idna==3.3
 importlib-metadata==4.8.1
+iniconfig==1.1.1
 Jinja2==3.0.2
 keyring==23.2.1
 Markdown==3.3.4
@@ -17,11 +20,15 @@ mergedeep==1.3.4
 mkdocs==1.2.3
 mypy-extensions==0.4.3
 packaging==21.0
-Panda3D==1.10.10
+Panda3D==1.10.7
 pathspec==0.9.0
 pkginfo==1.7.1
+platformdirs==2.3.0
+pluggy==1.0.0
+py==1.11.0
 Pygments==2.10.0
 pyparsing==3.0.3
+pytest==6.2.5
 python-dateutil==2.8.2
 pywin32-ctypes==0.2.0
 PyYAML==5.4.1
@@ -32,6 +39,7 @@ requests==2.26.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 six==1.16.0
+toml==0.10.2
 tomli==1.2.2
 tqdm==4.62.3
 twine==3.4.2
