--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ py==1.11.0
 Pygments==2.10.0
 pyparsing==3.0.3
 pytest==6.2.5
+pytest-pythonpath==0.7.3
 python-dateutil==2.8.2
 pywin32-ctypes==0.2.0
 PyYAML==5.4.1
